# spotify-analyze-v2

./: .gitignore  README.MD
needle/: .gitignore  CMakeLists.txt  README.MD  RESEARCH.MD  bootstrap.js  bootstrap.mjs  generate_protos.ps1  generate_protos.sh  linux.sh  package-lock.json  package.json  tsconfig.json  windows.ps1
needle/injector/: CMakeLists.txt  Cargo.toml  executable.cpp  executable.hpp  executable_linux.cpp  executable_win.cpp  log.hpp  main.cpp  prefs.cpp  prefs.hpp  process.cpp  process.hpp  process_linux.cpp  process_win.cpp  rustfmt.toml
needle/injector-rs/: Cargo.toml  rustfmt.toml
needle/injector-rs/sigscanner/: Cargo.toml
needle/injector-rs/sigscanner/src/: lib.rs  scanner.rs  signature.rs
needle/injector-rs/src/: main.rs  scan.rs  scanner.rs
needle/injector/include/: flags.h
needle/injector/src/: bootstrap.cpp  bootstrap.hpp  byteswap.hpp  elf.hpp  file_backed_block.cpp  file_backed_block.hpp  kill.cpp  kill.hpp  kill.rs  mach-o.hpp  main.cpp  main.rs  pe.hpp  platform.hpp  scan.cpp  scan.hpp  scan.rs  scanner.rs  script.rs
needle/proto/: canvaz.proto  collection2v2.proto  context-resolve.proto  extracted_colors.proto  identity.proto  playplay.proto
needle/proto/authentication/: authentication.old.proto
needle/proto/clienttoken/: client_token.old.proto  connectivity.old.proto
needle/proto/connect/: connect.proto  devices.proto  player.proto
needle/proto/extendedmetadata/: entity_extension_data.proto  extended_metadata.proto  extension_kind.proto  identity.proto  metadata.proto
needle/proto/keyexchange/: keyexchange.old.proto
needle/proto/login5/: client_info.proto  login5.proto  user_info.proto
needle/proto/login5/challenges/: code.proto  hashcash.proto
needle/proto/login5/credentials/: credentials.proto
needle/proto/login5/identifiers/: identifiers.proto
needle/proto/playlist/: playlist_external.proto  playlist_permission.proto
needle/proto/transfer/: context.proto  context_page.proto  context_player_options.proto  context_track.proto  play_origin.proto  playback.proto  queue.proto  restrictions.proto  session.proto  transfer_state.proto
needle/src/: base64-polyfill.ts  bigendian.hpp  launchArguments.ts  log.ts  logger.hpp  main.cpp  mercury.ts  proto.ts  shannon.ts  spirc.ts  url.hpp  util.hpp  utils.ts
needle/src/backend/: android.ts  any.ts  index.ts  ios.ts  linux.ts  windows.ts
needle/src/entry/: entry.hpp  linux.cpp  windows.cpp
needle/src/events/: event_service.cpp  events.hpp
needle/src/hooking/: hooking.cpp  hooking.hpp  shannon.cpp
needle/src/mercury/: connection_id.ts  events.ts  index.ts  mercury.hpp  recv.cpp  send.cpp
needle/src/proto/authentication/: authentication.old.ts
needle/src/proto/keyexchange/: keyexchange.old.ts
needle/src/proto/mercury/: mercury.old.ts  pubsub.old.ts
needle/src/types/: launchArgs.ts  offsets.ts
pineapple/: .gitignore  Cargo.toml  README.MD  build.rs  package-lock.json  package.json  private.pem  public.pem  rustfmt.toml  tsconfig.json
pineapple/frida/: index.ts  macho.ts  package-lock.json  package.json  start.sh  tsconfig.json
pineapple/proto/: Cargo.toml  ap.proto  build.rs
pineapple/proto/authentication/: authentication.old.proto
pineapple/proto/keyexchange/: keyexchange.old.proto
pineapple/proto/mercury/: pubsub.old.proto
pineapple/src/: dh.rs  launch.rs  main.rs  parse.rs  pcap.rs  pow.rs  proxy.rs  proxy_session.rs  shannon.rs  wireshark.rs
pineapple/src/frida/: elf.ts  index.ts  mod.rs  pe.ts
pineapple/src/proto/keyexchange/: keyexchange.old.proto
pineapple/src/proto/mercury/: mercury.old.proto
pineapple/src/proxy/: ap_resolver.rs  dh.rs  nonblocking.rs  pcap.rs  pcap_writer.rs  pow.rs  proxy_session.rs  shannon.rs  token_manager.rs
shannon/: CMakeLists.txt  ShannonRef.c  ShannonTest.c  ShannonTest2.c  hexlib.c
