[package]
name = "pineapple"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "pineapple"
path = "src/main.rs"

[dependencies.pineapple-proto]
path = "proto"
version = "1.0.0"

[dependencies]
aes = "0.8.3"
byteorder = "1.5.0"
cbc = { version = "0.1.2", features = ["std"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
grain128 = "0.1.0"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
mio = { version = "0.8.10", features = ["os-poll", "net"] }
num-bigint-dig = "0.8.4"
pcap-file = "2.0.0"
protobuf = "3.3.0"
rand = "0.8.5"
rsa = { version = "0.9.4", features = ["sha1", "pem"] }
sha1 = "0.10.6"
shannon = "0.2.0"
