[package]
name = "pineapple"
description = "A tool to perform a Man-In-The-Middle attack on Spotify to analyze SPIRC traffic using Wireshark"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "pineapple"
path = "src/main.rs"

[features]
default = ["download-frida"]
download-frida = ["frida/auto-download"]

[dependencies]
aes = "0.8.3"
anyhow = "1.0.81"
byteorder = "1.5.0"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.4.14", features = ["cargo"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
grain128 = "0.1.0"
hex = "0.4.3"
hmac = "0.12.1"
interprocess = "1.2.1"
lazy_static = "1.4.0"
mio = { version = "0.8.10", features = ["os-poll", "net"] }
num-bigint-dig = "0.8.4"
pcap-file = "2.0.0"
rand = "0.8.5"
rsa = { version = "0.9.4", features = ["sha1", "pem"] }
sha1 = "0.10.6"
shannon = "0.2.0"
thiserror = "1.0.58"
log = "0.4.20"
env_logger = "0.11.3"
nix = { version = "0.28.0", features = ["fs"] }
protobuf = "3"
frida = { version = "0.13.6" }

[target.'cfg(windows)'.dependencies]
known-folders = "1.1.0"

[target.'cfg(unix)'.dependencies]
inotify = { version = "0.10.2", default-features = false }

[build-dependencies]
protobuf-codegen = "3"
npm_rs = "1.0.0"
walkdir = "2"
