[package]
name = "needle-injector"
description = "A tool to dynamically instrument Spotify binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["cargo", "derive"] }
