[package]
name = "needle-injector"
description = "A tool to dynamically instrument Spotify binaries"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.5", features = ["cargo", "derive"] }
lazy_static = "1.4.0"
elf = "0.7.2"
mach_object = "0.1.17"
package_json_schema = "0.2.1"
pe-parser = "0.5.0"
nix = { version = "0.27.1", default-features = false, features = ["signal"] }
winsafe = { version = "0.0.18", features = ["kernel"] }
itertools = "0.11.0"
